chore: add web3 stuff

--- a/package.json
+++ b/package.json
@@ -32,10 +32,19 @@
     "@electric-sql/pglite": "^0.2.5",
     "@hookform/resolvers": "^3.9.0",
     "@logtail/pino": "^0.5.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@rainbow-me/rainbowkit": "^2.1.7",
     "@sentry/nextjs": "^8.29.0",
     "@spotlightjs/spotlight": "^2.3.2",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.56.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
+    "encoding": "^0.1.13",
+    "ethers": "^6.13.2",
+    "lucide-react": "^0.446.0",
     "next": "^14.2.9",
     "next-intl": "^3.19.1",
     "pg": "^8.12.0",
@@ -45,6 +54,10 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "sharp": "^0.33.5",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.21.15",
+    "wagmi": "^2.12.16",
     "zod": "^3.23.8"
   },
   "devDependencies": {
